# rcli

./: .pre-commit-config.yaml  Cargo.toml  README.md  deny.toml
.github/workflows/: build.yml
fixtures/: b64.txt
src/: lib.rs  main.rs  opts.rs  process.rs  utils.rs
src/cli/: base64.rs  csv.rs  genpass.rs  http.rs  mod.rs  text.rs
src/process/: b64.rs  csv_convert.rs  gen_pass.rs  http.rs  mod.rs  text.rs
