[package]
name = "rcli"
version = "0.1.0"
edition = "2024"
authors = ["tataraDM <enddream24@gmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.7", features = ["http2", "query", "tracing"] }
base64 = "0.22.1"
blake3 = "1.8.2"
clap = { version = "4.5.51", features = ["derive"] }
csv = "1.4.0"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand = "0.8.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.33"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
zxcvbn = "3.1.0"
